Fixed Spacing on small screens

--- a/client/src/components/pages/Dashboard/Statistics/Statistics.scss
+++ b/client/src/components/pages/Dashboard/Statistics/Statistics.scss
@@ -100,6 +100,7 @@
     .statistics {
         grid-template-columns: 1fr 1fr;
         gap: 2em 4em;
+        margin-top: 2em;
 
         .stat-box {
 
